package site.namsu.sweng.core.service;

import org.springframework.stereotype.Component;

/**
 * @Author : Hyunwoong
 * @When : 2018-11-29 오후 4:03
 * @Homepage : https://github.com/gusdnd852
 */
@Component
@SuppressWarnings("unchecked")
public class ChatService {

}
