package site.namsu.sweng.rx.function;

/**
 * @Author : Hyunwoong
 * @When : 2018-11-30 오전 10:50
 * @Homepage : https://github.com/gusdnd852
 */
@FunctionalInterface
public interface Runnable {
    void run() throws Exception;
}
