package site.namsu.sweng.util;

/**
 * @Author : Hyunwoong
 * @When : 2018-12-04 오후 10:24
 * @Homepage : https://github.com/gusdnd852
 */
public class Path {
    public static final String dao = "site.namsu.sweng.core.dao";
    public static final String entity = "site.namsu.sweng.core.entity";
}
