create table mingus.notice (
  noticeNumber int(10) auto_increment primary key,
  contents     text,
  date         varchar(10)
);
