@startuml

title __SWENG's Class Diagram__\n

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.base {
        class Accessor {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.entity {
        class Auth {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.function {
        interface BiConsumer {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.function {
        interface BiFunction {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.entity {
        class Board {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class BoardDao {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class BoardPublisher {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class ChatPublisher {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.service {
        class ChatService {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.service {
        class CheckService {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Complete {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.function {
        interface Consumer {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class ContactPublisher {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.base {
        interface Dao {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.publisher {
        class Empty {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.service {
        class EncodeService {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Error {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Filter {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Flatter {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.publisher {
        class Flux {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.function {
        interface Function {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.entity {
        class Group {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class GroupDao {
        }
      }
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.service {
        class LoadService {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.aop {
        class LogAdvice {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.entity {
        class Magazine {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class MagazineDao {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class MagazinePublisher {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.service {
        class MailService {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Mapper {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.entity {
        class Message {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class MessageDao {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.publisher {
        class Mono {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.entity {
        class Notice {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class NoticeDao {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class NoticePublisher {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.util {
        class Path {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.util {
        class Pool {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.function {
        interface Predicate {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Proceeder {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.publisher {
        class Publisher {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Reducer {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class ResetPublisher {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.service {
        class ResetService {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.function {
        interface Runnable {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.service {
        class SessionService {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.publisher {
        class SignPublisher {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.service {
        class StoreService {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.subscription {
        class Subscription {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.function {
        interface Supplier {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      class SwengApplication {
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.entity {
        class User {
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.core.dao {
        class UserDao {
        }
      }
    }
  }
  

  Auth -up-|> Authenticator
  BoardDao -up-|> Dao
  BoardDao -up-|> Accessor
  BoardPublisher o-- LoadService : loadService
  BoardPublisher o-- StoreService : writeService
  ChatPublisher o-- LoadService : loadService
  ChatPublisher o-- StoreService : writeService
  Complete -up-|> Publisher
  ContactPublisher o-- MailService : mailService
  Empty -up-|> Publisher
  Error -up-|> Publisher
  Filter -up-|> Publisher
  Flatter -up-|> Publisher
  Flux -up-|> Publisher
  GroupDao -up-|> Dao
  GroupDao -up-|> Accessor
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  MagazineDao -up-|> Dao
  MagazineDao -up-|> Accessor
  MagazinePublisher o-- LoadService : readService
  MagazinePublisher o-- StoreService : storeService
  Mapper -up-|> Publisher
  MessageDao -up-|> Dao
  MessageDao -up-|> Accessor
  Mono -up-|> Publisher
  NoticeDao -up-|> Dao
  NoticeDao -up-|> Accessor
  NoticePublisher o-- LoadService : loadService
  NoticePublisher o-- StoreService : storeService
  NoticePublisher o-- CheckService : checkService
  Proceeder -up-|> Publisher
  Publisher -up-|> Publisher
  Reducer -up-|> Publisher
  Reducer o-- R : temp
  ResetPublisher o-- CheckService : checkService
  ResetPublisher o-- ResetService : resetService
  ResetPublisher o-- MailService : mailService
  ResetPublisher o-- EncodeService : encodeService
  SignPublisher o-- CheckService : checkService
  SignPublisher o-- StoreService : storeService
  SignPublisher o-- SessionService : sessionService
  SignPublisher o-- EncodeService : encodeService
  Subscription -up-|> Subscription
  UserDao -up-|> Dao
  UserDao -up-|> Accessor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
